# PGNAnalyzer

./: CMakeLists.txt  README.md  notes.txt
include/: Game.hpp
src/: .Game.cpp.swp  Game.cpp  main.cpp
tests/: CMakeLists.txt
